--- a/RockstarGamesLauncher/Views/GamesView.xaml
+++ b/RockstarGamesLauncher/Views/GamesView.xaml
@@ -73,34 +73,23 @@
                 </Grid.RowDefinitions>
 
                 <StackPanel Grid.Row="1" VerticalAlignment="Top">
-                    <StackPanel Margin="0,20,0,0">
-                        <Label FontWeight="Bold" Visibility="{Binding IsExpanded, Converter={StaticResource BooleanToVisibilityConverter}}">Now available</Label>
-                        <ListView
+                    <StackPanel Margin="5,20,0,0">
+                        <Label
+                            FontSize="14"
+                            FontWeight="Bold"
+                            Visibility="{Binding IsExpanded, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            Now available
+                        </Label>
+                        <ItemsControl
                             Background="Transparent"
                             BorderThickness="0"
-                            ItemsSource="{Binding Games}"
-                            SelectedItem="{Binding SelectedGame}">
-                            <ListView.ItemTemplate>
+                            ItemsSource="{Binding Games}">
+                            <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <StackPanel
-                                        Margin="0,10,0,0"
-                                        Cursor="Hand"
-                                        Orientation="Horizontal">
-                                        <Image
-                                            Width="30"
-                                            Height="30"
-                                            RenderOptions.BitmapScalingMode="HighQuality"
-                                            Source="{Binding Icon}" />
-                                        <Label
-                                            Margin="10,0,0,0"
-                                            VerticalAlignment="Center"
-                                            Content="{Binding Name}"
-                                            Opacity="0.65"
-                                            Visibility="{Binding Path=DataContext.IsExpanded, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}" />
-                                    </StackPanel>
+                                    <controls:AsideNavItem Icon="{Binding Icon}" Label="{Binding Name}" />
                                 </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
                     </StackPanel>
                 </StackPanel>
 
