--- a/RockstarGamesLauncher/MainWindow.xaml
+++ b/RockstarGamesLauncher/MainWindow.xaml
@@ -83,7 +83,10 @@
                 </Border>
             </DockPanel>
 
-            <Border Grid.Row="1" Padding="35,0,35,0">
+            <Border
+                Grid.Row="1"
+                Margin="0,10,0,0"
+                Padding="35,0,35,0">
                 <DockPanel>
                     <Button
                         Width="40"
