--- a/RockstarGamesLauncher/Views/GamesView.xaml
+++ b/RockstarGamesLauncher/Views/GamesView.xaml
@@ -86,7 +86,11 @@
                             ItemsSource="{Binding Games}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <controls:AsideNavItem Icon="{Binding Icon}" Label="{Binding Name}" />
+                                    <controls:AsideNavItem
+                                        Command="{Binding Path=DataContext.SelectGameCommand, RelativeSource={RelativeSource AncestorType={x:Type StackPanel}}}"
+                                        CommandParameter="{Binding .}"
+                                        Icon="{Binding Icon}"
+                                        Label="{Binding Name}" />
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
