--- a/RockstarGamesLauncher/App.xaml
+++ b/RockstarGamesLauncher/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="Resources/Styles/Reset.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Buttons.xaml" />
+                <ResourceDictionary Source="Resources/Styles/AsideNavItem.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         </ResourceDictionary>
