--- a/RockstarGamesLauncher/Resources/Styles/AsideNavItem.xaml
+++ b/RockstarGamesLauncher/Resources/Styles/AsideNavItem.xaml
@@ -1,4 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <Style x:Key="AsideNavItem" TargetType="ListViewItem">
         <Setter Property="Template">
             <Setter.Value>
@@ -35,14 +36,17 @@
                             <Label
                                 Margin="15,0,0,0"
                                 VerticalAlignment="Center"
-                                Content="{Binding Name}"
-                                Visibility="{Binding Path=DataContext.Is, RelativeSource={RelativeSource AncestorType={x:Type StackPanel}}}">
+                                Content="{Binding Name}">
                                 <Label.Style>
                                     <Style TargetType="Label">
                                         <Setter Property="Opacity" Value="0.65" />
+                                        <Setter Property="Visibility" Value="Visible" />
                                         <Style.Triggers>
                                             <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}" Value="True">
                                                 <Setter Property="Opacity" Value="1" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ListView}, Path=DataContext.IsExpanded}" Value="False">
+                                                <Setter Property="Visibility" Value="Visible" />
                                             </DataTrigger>
                                         </Style.Triggers>
                                     </Style>
