--- a/RockstarGamesLauncher/Views/GamesView.xaml
+++ b/RockstarGamesLauncher/Views/GamesView.xaml
@@ -72,21 +72,25 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="1" VerticalAlignment="Top">
+                <StackPanel
+                    Grid.Row="1"
+                    VerticalAlignment="Top">
                     <StackPanel>
                         <Label
+                            Margin="40,0,0,0"
                             FontSize="14"
                             FontWeight="Bold"
-                            Margin="40,0,0,0"
                             Visibility="{Binding IsExpanded, Converter={StaticResource BooleanToVisibilityConverter}}">
                             Now available
                         </Label>
                         <ListView
                             Background="Transparent"
                             BorderThickness="0"
+                            ScrollViewer.HorizontalScrollBarVisibility="Hidden"
                             ItemContainerStyle="{StaticResource AsideNavItem}"
                             ItemsSource="{Binding Games}"
-                            SelectedItem="{Binding SelectedGame}" />
+                            SelectedItem="{Binding SelectedGame}"
+                            SelectionMode="Single" />
                     </StackPanel>
                 </StackPanel>
 
