--- a/RockstarGamesLauncher/MainWindow.xaml
+++ b/RockstarGamesLauncher/MainWindow.xaml
@@ -46,8 +46,7 @@
                             Margin="5,0,5,0"
                             VerticalAlignment="Center"
                             BorderThickness="0"
-                            Click="MinimizeApp"
-                            Opacity="0.5">
+                            Click="MinimizeApp">
                             <Image
                                 Width="15"
                                 Height="15"
@@ -59,8 +58,7 @@
                             Margin="5,0,5,0"
                             VerticalAlignment="Center"
                             BorderThickness="0"
-                            Click="MaximizeApp"
-                            Opacity="0.5">
+                            Click="MaximizeApp">
                             <Image
                                 Width="15"
                                 Height="15"
@@ -72,8 +70,7 @@
                             Margin="5,0,5,0"
                             VerticalAlignment="Center"
                             BorderThickness="0"
-                            Click="CloseApp"
-                            Opacity="0.5">
+                            Click="CloseApp">
                             <Image
                                 Width="15"
                                 Height="15"
@@ -113,8 +110,7 @@
                             Command="{Binding GotoGamesCommand}"
                             FontSize="16"
                             FontWeight="Medium"
-                            Foreground="White"
-                            Opacity="0.65">
+                            Foreground="White">
                             GAMES
                         </Button>
                         <Button
@@ -125,8 +121,7 @@
                             Command="{Binding GotoSettingsCommand}"
                             FontSize="16"
                             FontWeight="Medium"
-                            Foreground="White"
-                            Opacity="0.65">
+                            Foreground="White">
                             SETTINGS
                         </Button>
                         <Ellipse
