--- a/RockstarGamesLauncher/Resources/Styles/AsideNavIconItem.xaml
+++ b/RockstarGamesLauncher/Resources/Styles/AsideNavIconItem.xaml
@@ -1,12 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="AsideNavItem" TargetType="ListViewItem">
+    <Style x:Key="AsideNavIconItem" TargetType="ListViewItem">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ListViewItem">
                     <Border
-                        Height="30"
-                        Padding="20,0,0,0"
+                        Height="40"
+                        Margin="0,10,0,0"
+                        Padding="38,0,0,0"
                         HorizontalAlignment="Left"
                         BorderThickness="0"
                         Cursor="Hand">
@@ -14,7 +15,7 @@
                             <Border
                                 Width="3"
                                 Height="28"
-                                Margin="-38,0,0,0"
+                                Margin="-74,0,0,0"
                                 Background="{StaticResource RockstarYellow}">
                                 <Border.Style>
                                     <Style TargetType="Border">
@@ -27,10 +28,15 @@
                                     </Style>
                                 </Border.Style>
                             </Border>
+                            <Image
+                                Width="30"
+                                Height="30"
+                                RenderOptions.BitmapScalingMode="HighQuality"
+                                Source="{Binding Icon}" />
                             <Label
                                 Margin="15,0,0,0"
                                 VerticalAlignment="Center"
-                                Content="{TemplateBinding Content}">
+                                Content="{Binding Name}">
                                 <Label.Style>
                                     <Style TargetType="Label">
                                         <Setter Property="Opacity" Value="0.65" />
@@ -38,6 +44,9 @@
                                         <Style.Triggers>
                                             <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}" Value="True">
                                                 <Setter Property="Opacity" Value="1" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ListView}, Path=DataContext.IsExpanded}" Value="False">
+                                                <Setter Property="Visibility" Value="Visible" />
                                             </DataTrigger>
                                         </Style.Triggers>
                                     </Style>
