--- a/RockstarGamesLauncher/Views/SettingsView.xaml
+++ b/RockstarGamesLauncher/Views/SettingsView.xaml
@@ -42,14 +42,10 @@
                             Background="Transparent"
                             BorderThickness="0"
                             ItemContainerStyle="{StaticResource AsideNavItem}"
+                            ItemsSource="{Binding SettingsItems}"
                             ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                            SelectedIndex="0"
-                            SelectionMode="Single">
-                            <ListViewItem Content="General" />
-                            <ListViewItem Content="Account Information" />
-                            <ListViewItem Content="Updates" />
-                            <ListViewItem Content="Legal" />
-                        </ListView>
+                            SelectedIndex="{Binding SelectedPageIndex}"
+                            SelectionMode="Single" />
                     </StackPanel>
                 </StackPanel>
             </Grid>
