--- a/RockstarGamesLauncher/App.xaml
+++ b/RockstarGamesLauncher/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="Resources/Styles/Reset.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/BuyButton.xaml" />
+                <ResourceDictionary Source="Resources/Styles/RoundedButton.xaml" />
                 <ResourceDictionary Source="Resources/Styles/AsideNavItem.xaml" />
                 <ResourceDictionary Source="Resources/Styles/AsideNavIconItem.xaml" />
             </ResourceDictionary.MergedDictionaries>
