--- a/RockstarGamesLauncher/Views/Settings/SettingsLegalView.xaml
+++ b/RockstarGamesLauncher/Views/Settings/SettingsLegalView.xaml
@@ -20,60 +20,52 @@
             <Border
                 Grid.Row="1"
                 Grid.Column="0"
-                MaxWidth="750"
-                Padding="35,0,35,0">
+                Width="750"
+                Margin="0,-32,0,0"
+                Padding="50,0,50,0"
+                HorizontalAlignment="Left">
                 <StackPanel HorizontalAlignment="Stretch">
-                    <DockPanel Height="80">
-                        <Label VerticalAlignment="Center" FontSize="20">Terms of Service</Label>
-                        <Button
-                            Width="160"
-                            Height="40"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Foreground="White">
-                            VIEW POLICY
-                        </Button>
-                    </DockPanel>
-                    <Border Height="0.35" Background="White" />
-                    <DockPanel Height="80">
-                        <Label VerticalAlignment="Center" FontSize="20">Privacy Policy</Label>
-                        <Button
-                            Width="160"
-                            Height="40"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Foreground="White">
-                            VIEW POLICY
-                        </Button>
-                    </DockPanel>
-                    <Border Height="0.35" Background="White" />
-                    <DockPanel Height="80">
-                        <Label VerticalAlignment="Center" FontSize="20">End User License Agreement</Label>
-                        <Button
-                            Width="160"
-                            Height="40"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Foreground="White">
-                            VIEW POLICY
-                        </Button>
-                    </DockPanel>
-                    <Border Height="0.35" Background="White" />
-                    <DockPanel Height="80">
-                        <Label VerticalAlignment="Center" FontSize="20">Third-Party Licenses</Label>
-                        <Button
-                            Width="160"
-                            Height="40"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Foreground="White">
-                            VIEW POLICY
-                        </Button>
-                    </DockPanel>
+                    <Border Padding="0,20,0,20">
+                        <DockPanel>
+                            <Label VerticalAlignment="Center" FontSize="16">Terms of Service</Label>
+                            <Button HorizontalAlignment="Right" Style="{StaticResource RoundedButton}">
+                                VIEW POLICY
+                            </Button>
+                        </DockPanel>
+                    </Border>
+                    
+                    <Border Height="0.25" Background="White" />
+                    
+                    <Border Padding="0,20,0,20">
+                        <DockPanel>
+                            <Label VerticalAlignment="Center" FontSize="16">Privacy Policy</Label>
+                            <Button HorizontalAlignment="Right" Style="{StaticResource RoundedButton}">
+                                VIEW POLICY
+                            </Button>
+                        </DockPanel>
+                    </Border>
+                    
+                    <Border Height="0.25" Background="White" />
+
+                    <Border Padding="0,20,0,20">
+                        <DockPanel>
+                            <Label VerticalAlignment="Center" FontSize="16">End User License Agreement</Label>
+                            <Button HorizontalAlignment="Right" Style="{StaticResource RoundedButton}">
+                                VIEW POLICY
+                            </Button>
+                        </DockPanel>
+                    </Border>
+                    
+                    <Border Height="0.25" Background="White" />
+
+                    <Border Padding="0,20,0,20">
+                        <DockPanel>
+                            <Label VerticalAlignment="Center" FontSize="16">Third-Party Licenses</Label>
+                            <Button HorizontalAlignment="Right" Style="{StaticResource RoundedButton}">
+                                VIEW POLICY
+                            </Button>
+                        </DockPanel>
+                    </Border>
                 </StackPanel>
             </Border>
         </Grid>
